[gd_scene load_steps=2 format=3 uid="uid://yqfkeri0wnsg"]

[ext_resource type="Script" path="res://PowerUpSpawner.gd" id="1_s8k5f"]

[node name="PowerUpSpawner" type="Node"]
script = ExtResource("1_s8k5f")

[node name="BucketTimer" type="Timer" parent="."]

[node name="AmmoTimer" type="Timer" parent="."]

[node name="PowerUpTimerDisplay" type="Label" parent="."]
z_index = 6
offset_left = 93.0
offset_top = 653.0
offset_right = 331.0
offset_bottom = 722.0
theme_override_colors/font_color = Color(0.94902, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)

[connection signal="timeout" from="BucketTimer" to="." method="_on_bucket_timer_timeout"]
[connection signal="timeout" from="AmmoTimer" to="." method="_on_ammo_timer_timeout"]
